--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,19 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="movies_sort_spinner_margin">10dp</dimen>
+    <dimen name="summary_text_margin">10dp</dimen>
+    <dimen name="detail_title_text_size">30sp</dimen>
+    <dimen name="details_text_small">16sp</dimen>
+    <dimen name="details_text_large">20sp</dimen>
+    <dimen name="margin_top_small">1dp</dimen>
+    <dimen name="margin_top_large">20dp</dimen>
+    <dimen name="margin_left_small">15dp</dimen>
+    <dimen name="margin_left_large">200dp</dimen>
+    <dimen name="card_corner_radius">4dp</dimen>
+    <dimen name="small_headline">20sp</dimen>
+    <dimen name="cardview_body_text_size">16sp</dimen>
+    <dimen name="sort_movies_dropdown_padding">10dp</dimen>
+    <dimen name="sort_movies_item_padding">10dp</dimen>
+    <dimen name="sort_movies_item_text_size">12sp</dimen>
 </resources>
