--- a/app/src/main/res/layout-sw600dp/activity_movies.xml
+++ b/app/src/main/res/layout-sw600dp/activity_movies.xml
@@ -23,8 +23,7 @@
                 android:id="@+id/sort_movies"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_gravity="end"
-                 />
+                android:layout_gravity="end" />
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
@@ -34,9 +33,9 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="horizontal"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:mContext=".MainActivity"
-        android:orientation="horizontal">
+        tools:mContext=".MainActivity">
 
 
         <android.support.v7.widget.RecyclerView
@@ -45,12 +44,14 @@
             android:layout_height="match_parent"
             android:layout_weight="2" />
 
-        <RelativeLayout
+        <LinearLayout
+            android:id="@+id/movie_detail"
+            android:orientation="vertical"
             android:layout_width="0dip"
             android:layout_height="match_parent"
-            android:id="@+id/movie_detail"
-            android:layout_weight="4"
-             />
+            android:layout_weight="4">
+
+        </LinearLayout>
 
 
     </LinearLayout>
