--- a/app/src/main/res/layout/list_review_movie.xml
+++ b/app/src/main/res/layout/list_review_movie.xml
@@ -2,10 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_margin="2dp"
     android:layout_height="wrap_content"
-    android:visibility="visible"
-    android:id="@+id/movies_card_view"
     card_view:cardBackgroundColor="#FFFFFF"
     card_view:cardCornerRadius="@dimen/card_corner_radius"
     card_view:cardElevation="@dimen/card_elevation"
@@ -15,26 +12,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/card_margin">
-
-        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/movies_list_item_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:scaleType="centerCrop" />
+        android:padding="@dimen/margin">
 
         <TextView
+            android:id="@+id/review_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/title"
-            android:singleLine="true"
-            android:layout_marginTop="5dp" />
+            android:background="@drawable/touch_selector"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp" />
 
         <TextView
+            android:id="@+id/review_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/rating" />
+            android:background="@drawable/touch_selector"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp" />
 
+        <TextView
+            android:id="@+id/review_url"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:autoLink="web"
+            android:background="@drawable/touch_selector"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
