--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,9 @@
     <dimen name="sort_movies_item_text_size">12sp</dimen>
     <dimen name="title_padding">10dp</dimen>
     <dimen name="poster_margin">10dp</dimen>
+    <dimen name="fab_normal_elevation">6dp</dimen>
+    <dimen name="fab_pressed_elevation">12dp</dimen>
+    <dimen name="margin">16dp</dimen>
+    <dimen name="card_margin">5dp</dimen>
+    <dimen name="card_elevation">6dp</dimen>
 </resources>
